Version 2.1 (26. Juni 2012)
https://sasse.googlecode.com/svn/tags/2.1

- Spezialwettkämpfe (Schwimmen, Einzelschnüren, Gruppenschnüren, Bootfährenbau)
  eingeführt.

- Initialdaten für Postenart 'Höchstes Ziel' und 'Abmeldung Sektionsfahren'
  angepasst.


Version 2.0.2 (18. Mai 2012)
https://sasse.googlecode.com/svn/tags/2.0.2

- Label für Sektionszuschläge Formular korrigiert
  (war 'Gruppe' statt 'Sektion').

- Navigation von Startliste Sektionsfahren verbessert.


Version 2.0.1 (18. Mai 2012)
https://sasse.googlecode.com/svn/tags/2.0.1

- Problem mit Python Packing gefixt. Nun sind Templates/Fixtures/Media auch in
  der Distribution enthalten.


Version 2.0 (18. Mai 2012)
https://sasse.googlecode.com/svn/tags/2.0

- Sektionsfahren implementiert.


Version 1.3 (31. August 2011)
https://sasse.googlecode.com/svn/tags/1.3

- Der Import von Mitgliederdaten stürzt nicht mehr ab, wenn ein Mitglied
  geliefert wird, dass zuvor schon *mehrmals* beim Posten A0 erfasst wurde.

- Bei der Startlisteneingabe wird nächste gültige Startnummer gewählt, falls
  eine neue Sektion beginnt. Bisher wurde immer nur '1' gezeigt.
  Folgende Defaults existieren und können in den Settings (local_settings.py)
  umdefiniert werden:
     ERSTE_DOPPELSTARTER_NUMMER_KLEINER_PARCOUR = 151
     ERSTE_DOPPELSTARTER_NUMMER_GROSSER_PARCOUR = 601


Version 1.2 (23. Juni 2011)
https://sasse.googlecode.com/svn/tags/1.2

- Startliste hat einen Abbrechen Link, falls es Eingabefehler gegeben hat.
  Somit kann der Benutzer bei Falscheingaben nochmals von vorne beginnen.

- Notenliste ist immer nach Punkte und Zeit sortiert, auch wenn keine Sektion
  gewählt wurde. Aus Performance Gründen wurde auf diese Sortierung verzichtet.

- Notenliste sämtlicher Sektionen können mit einem Click ausgedruckt werden.
  Achtung: Das kann lange (dutzende Sekunden) dauern.

- Notenliste PDF enthält in der Kopfzeile den Sektionsnamen (sofern nach einer
  Sektion gefiltert wurde). Das spart Platz in der Fahrerpaar Spalte.
